--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
-    "create-elm-app": "^3.0.6"
+    "create-elm-app": "^3.0.6",
+    "elm-analyse": "^0.16.1",
+    "elm-format": "^0.8.1"
   },
   "scripts": {
     "test": "elm-app test",
