--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "directories": {
     "test": "tests"
   },
-  "dependencies": {
-    "elm-app": "^0.0.19"
+  "dependencies": { },
+  "devDependencies": {
+    "create-elm-app": "^3.0.6"
   },
-  "devDependencies": {},
   "scripts": {
     "build": "elm-app build",
     "test": "echo \"Error: no test specified\" && exit 1"
