json-server fetch top user

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Distribution
-# build/
+build/
 
 # elm-package generated files
 elm-stuff
@@ -12,3 +12,5 @@ node_modules
 
 # Desktop Services Store on macOS
 .DS_Store
+
+json-server/.env
