--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "directories": {
     "test": "tests"
   },
-  "dependencies": { },
+  "dependencies": {
+    "axios": "^0.18.0"
+  },
   "devDependencies": {
     "create-elm-app": "^3.0.6"
   },
