--- a/package.json
+++ b/package.json
@@ -7,13 +7,19 @@
     "test": "tests"
   },
   "dependencies": {
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "dotenv": "^8.0.0"
   },
   "devDependencies": {
-    "create-elm-app": "^3.0.6"
+    "@types/axios": "^0.14.0",
+    "create-elm-app": "^3.0.6",
+    "tsc": "^1.20150623.0"
   },
   "scripts": {
+    "start": "elm-app start",
     "build": "elm-app build",
+    "build-db": "tsc -p ./json-server/ & node ./json-server/fetch-data.js",
+    "serve-db": "json-server --watch ./json-server/db.json --port 5000",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
