--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "create-elm-app": "^3.0.6",
-    "tsc": "^1.20150623.0"
+    "create-elm-app": "^3.0.6"
   },
   "scripts": {
     "start": "elm-app start",
