--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "dotenv": "^8.0.0"
+    "dotenv": "^8.0.0",
+    "lodash.uniqby": "^4.7.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/lodash.uniqby": "^4.7.6",
     "create-elm-app": "^3.0.6"
   },
   "scripts": {
